k8s/ocp-3.11/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cds-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
      proxy_set_header X-Scheme $scheme;
      proxy_set_header X-Forwarded-Proto $scheme;
      add_header Content-Security-Policy upgrade-insecure-requests;
    nginx.ingress.kubernetes.io/proxy-body-size: "150m"
    nginx.org/client-max-body-size: "150m"
spec:
  rules:
    - host: cds.domain.org
      http:
        paths:
          - backend:
              serviceName: cds
              servicePort: 8081
            path: /
          - backend:
              serviceName: cds
              servicePort: 8080
            path: /api/v1/
  tls:
    - hosts:
        - cds.domain.org
      secretName: sample-tls-secret
